Flowers/kubernetes-manifests/ingress/middleware-stripprefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-flowers-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - "/flowers"

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-billing-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - "/billing"
