Flowers/kubernetes-manifests/ingress/billing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-cors@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /billing
        pathType: Prefix
        backend:
          service:
            name: billing-service
            port:
              number: 80
